Changing contact page, replace form with email link (#7)

--- a/contact.html
+++ b/contact.html
@@ -119,59 +119,31 @@
 			<div class="main_rgt">
 				<script type="text/javascript" src="assets/js/module_simple.js"></script>
 
-<form id="emailform" name="emailform" method="post" action="http://nguyentay.art/contact/accept">
 
 	<h1>Contact...</h1>
-<div id="formpage">
-	<div class="formarea">
-		<div class="form">
-			<h3>Your Details</h3>
 
+<p>Want to get in touch? Our general contact details are below.</p>
 
-        <span class="formtext">Your First Name:</span>
-        <input type="text" onkeydown="validatefld('firstname', false);" onblur="validatefld('firstname', true);" id="firstname" class="formsfixed" value="" name="firstname">
-	
-	<img class="formicon" alt="required" id="img-firstname" src="assets/images/required.png">
-	
-	<br>
-
-
-        <span class="formtext">Your Last Name:</span>
-        <input type="text" onkeydown="validatefld('lastname', false);" onblur="validatefld('lastname', true);" id="lastname" class="formsfixed" value="" name="lastname">
-	
-	<img class="formicon" id="img-lastname" alt="required" src="assets/images/required.png">
-	
-	<br>
-
-
-        <span class="formtext">Your Email:</span>
-        <input type="text" onkeydown="validateemailfld('email', false);" onblur="validateemailfld('email', true);" id="email" class="formsfixed" value="" name="email">
-	
-		<img class="formicon" id="img-email" alt="required" src="assets/images/required.png">
-	
-	<br>
-
-
-
-        </div>
-
-      <div class="form">
-      <h3>Enquiry Details </h3>
-      Enter  the details of your enquiry below.<br>
-      <br>
-      <span class="formtext">Comments/Enquiry</span>
-        <textarea onkeydown="validatefld('comments', false);" onblur="validatefld('comments', true);" id="comments" class="formsmulti" rows="8" name="comments"></textarea>
-          <img class="formicon" alt="required" id="img-comments" src="assets/images/required.png"><br>
-        </div>
-
-    </div>
-    <a class="mainbutton" href="javascript: formsubmit('emailform');"> SEND ENQUIRY</a></div>
-    <h3>
-         
-            
-</h3>
-
-</form>
+<div>
+<br />
+	<br />
+	<h2>Artist: </h2>
+	<p>Nguyen Tay</p>
+	<p>Email: <a href="mailto:nguyentayartist@gmail.com">nguyentayartist@gmail.com</a></p>
+	<p>&#43; &nbsp; 84 1228080554 (Viet Nam)</p>
+	<br />
+	<br />
+	<h2>Manager: </h2>
+	<p>Mr Sun - LayTan</p>
+	<p>Email: <a href="mailto:sunlaytan@gmail.com">sunlaytan@gmail.com</a></p>
+	<p>+33 615420461 (France)</p>
+	<br />
+	<br />
+	<img width="100" height="100" src="assets/images/logocontact.jpg" />
+	<h2>GALERIE BEAUTÉ DU MATIN CALME</h2>
+	<p>VILLAGE SUISSE</p>
+	<p>54 RUE DE LA MOTTE-PICQUET 75015 PARIS</p>	
+</div>
 
 <input type="hidden" id="tmpurl" value="http://nguyentay.art/" />
 
