--- a/cv.html
+++ b/cv.html
@@ -43,8 +43,7 @@
 						<div style="float: left">
 							<div class="logo">
 								<a href="home.html">
-									<!--  <img border="0" class="logo" alt="" src="http://nguyentay.art/assets/images/default-logo.jpg"> -->
-									NGUYEN TAY
+									<img border="0" class="logo" alt="" src="assets/images/logo.png" />
 								</a>	
 							</div>
 						</div>
