--- a/exhibiton/cate/10.html
+++ b/exhibiton/cate/10.html
@@ -1,6 +1,7 @@
 ---
 layout: cate
 title: Exhibition in 2015
+category: exhibition
 ---
 				<h1>Exhibition in 2015</h1>
 <!-- <div id="treeview"><a href="index.html">Home</a> / <a href="exhibiton.html">Category </a>/ <span class="smallgrey">images</span></div>  -->
