--- a/catalogue/cate/5.html
+++ b/catalogue/cate/5.html
@@ -1,6 +1,7 @@
 ---
 layout: cate
 title: Artworks 2013
+category: catalogue
 ---
 				<h1>Artworks 2013</h1>
 <!-- <div id="treeview"><a href="index.html">Home</a> / <a href="catalogue.html">Category </a>/ <span class="smallgrey">images</span></div>  -->
