--- a/catalogue/cate/7.html
+++ b/catalogue/cate/7.html
@@ -1,6 +1,7 @@
 ---
 layout: cate
 title: Artworks 2014
+category: catalogue
 ---
 				<h1>Artworks 2014</h1>
 <!-- <div id="treeview"><a href="index.html">Home</a> / <a href="catalogue.html">Category </a>/ <span class="smallgrey">images</span></div>  -->
