--- a/catalogue/cate/8.html
+++ b/catalogue/cate/8.html
@@ -1,6 +1,7 @@
 ---
 layout: cate
 title: Last exhibitions
+category: catalogue
 ---
 				<h1>Last exhibitions</h1>
 <!-- <div id="treeview"><a href="index.html">Home</a> / <a href="catalogue.html">Category </a>/ <span class="smallgrey">images</span></div>  -->
