--- a/exhibiton/cate/16.html
+++ b/exhibiton/cate/16.html
@@ -1,6 +1,7 @@
 ---
 layout: cate
 title: Exhibitions / Expositions 2017
+category: exhibition
 ---
 				<h1>Exhibitions / Expositions 2017</h1>
 <!-- <div id="treeview"><a href="index.html">Home</a> / <a href="exhibiton.html">Category </a>/ <span class="smallgrey">images</span></div>  -->
