adding more missing images

--- a/catalogue/cate/12.html
+++ b/catalogue/cate/12.html
@@ -11,25 +11,25 @@ category: catalogue
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/12/81.html"><img width="185" alt="Marianne aux Camélias" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/Marianne.JPG"></a>
+					<a href="../catedetail/12/81.html"><img width="185" alt="Marianne aux Camélias" src="/assetsadmin/imagesupload/image1/Marianne.JPG"></a>
 					<h4></h4>Marianne aux Camélias				</li>
 							<li >
-					<a href="../catedetail/12/80.html"><img width="185" alt="Plum Flower ( Fleur de prunier )" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/FleurDePrunier.JPG"></a>
+					<a href="../catedetail/12/80.html"><img width="185" alt="Plum Flower ( Fleur de prunier )" src="/assetsadmin/imagesupload/image1/FleurDePrunier.JPG"></a>
 					<h4></h4>Plum Flower ( Fleur de prunier )				</li>
 							<li class="last">
-					<a href="../catedetail/12/79.html"><img width="185" alt="Clown" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/Clown.jpg"></a>
+					<a href="../catedetail/12/79.html"><img width="185" alt="Clown" src="/assetsadmin/imagesupload/image/Clown.jpg"></a>
 					<h4></h4>Clown				</li>
 							<li >
-					<a href="../catedetail/12/71.html"><img width="185" alt="Pensive" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Pensive.jpg"></a>
+					<a href="../catedetail/12/71.html"><img width="185" alt="Pensive" src="/assetsadmin/imagesupload/image2/Pensive.jpg"></a>
 					<h4></h4>Pensive				</li>
 							<li >
-					<a href="../catedetail/12/70.html"><img width="185" alt="Glance" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Glance.jpg"></a>
+					<a href="../catedetail/12/70.html"><img width="185" alt="Glance" src="/assetsadmin/imagesupload/image2/Glance.jpg"></a>
 					<h4></h4>Glance				</li>
 							<li class="last">
-					<a href="../catedetail/12/69.html"><img width="185" alt="My Garden - Mon Jardin" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/My%20Garden-Nguyen%20Tay.JPG"></a>
+					<a href="../catedetail/12/69.html"><img width="185" alt="My Garden - Mon Jardin" src="/assetsadmin/imagesupload/image/My%20Garden-Nguyen%20Tay.JPG"></a>
 					<h4></h4>My Garden - Mon Jardin				</li>
 							<li >
-					<a href="../catedetail/12/60.html"><img width="185" alt="lead the butterfly" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/Philippine.jpg"></a>
+					<a href="../catedetail/12/60.html"><img width="185" alt="lead the butterfly" src="/assetsadmin/imagesupload/image/Philippine.jpg"></a>
 					<h4></h4>lead the butterfly				</li>
 
 </ul>
