--- a/catalogue/cate/18.html
+++ b/catalogue/cate/18.html
@@ -11,16 +11,16 @@ category: catalogue
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/18/90.html"><img width="185" alt="Reflections (Reflet et réflexion)" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Refletetreflexion.jpg"></a>
+					<a href="../catedetail/18/90.html"><img width="185" alt="Reflections (Reflet et réflexion)" src="/assetsadmin/imagesupload/image2/Refletetreflexion.jpg"></a>
 					<h4></h4>Reflections (Reflet et réflexion)				</li>
 							<li >
-					<a href="../catedetail/18/89.html"><img width="185" alt="No title (Sans titre)" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/SansTitre.JPG"></a>
+					<a href="../catedetail/18/89.html"><img width="185" alt="No title (Sans titre)" src="/assetsadmin/imagesupload/image2/SansTitre.JPG"></a>
 					<h4></h4>No title (Sans titre)				</li>
 							<li class="last">
-					<a href="../catedetail/18/86.html"><img width="185" alt="Tet Festival - Fête du Têt" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/fetedutet.jpg"></a>
+					<a href="../catedetail/18/86.html"><img width="185" alt="Tet Festival - Fête du Têt" src="/assetsadmin/imagesupload/image1/fetedutet.jpg"></a>
 					<h4></h4>Tet Festival - Fête du Têt				</li>
 							<li >
-					<a href="../catedetail/18/85.html"><img width="185" alt="Under the pomegranate tree - Sous le grenadier" src="http://www.nguyentay.art/assetsadmin/imagesupload/image1/UnderPomegranatetree.jpg"></a>
+					<a href="../catedetail/18/85.html"><img width="185" alt="Under the pomegranate tree - Sous le grenadier" src="/assetsadmin/imagesupload/image1/UnderPomegranatetree.jpg"></a>
 					<h4></h4>Under the pomegranate tree - Sous le grenadier				</li>
 
 </ul>
