wip replacing some files

--- a/catalogue/cate/4.html
+++ b/catalogue/cate/4.html
@@ -10,34 +10,34 @@ category: catalogue
 </div>
 <ul class="rgt_list">
 					<li >
-					<a href="../catedetail/4/72.html"><img width="185" alt="Princess" src="http://www.nguyentay.art/assetsadmin/imagesupload/image2/Princess2011.jpg"></a>
+					<a href="../catedetail/4/72.html"><img width="185" alt="Princess" src="/assetsadmin/imagesupload/image2/Princess2011.jpg"></a>
 					<h4></h4>Princess				</li>
 							<li >
-					<a href="../catedetail/4/40.html"><img width="185" alt="Dreamer" src="http://www.nguyentay.art/assetsadmin/imagesupload/slideshowhome/page%2018%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/40.html"><img width="185" alt="Dreamer" src="/assetsadmin/imagesupload/slideshowhome/page%2018%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Dreamer				</li>
 							<li class="last">
-					<a href="../catedetail/4/22.html"><img width="185" alt="The Dream" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%204%20TAYNGUYEN%20.jpg"></a>
+					<a href="../catedetail/4/22.html"><img width="185" alt="The Dream" src="/assetsadmin/imagesupload/image/page%204%20TAYNGUYEN%20.jpg"></a>
 					<h4></h4>The Dream				</li>
 							<li >
-					<a href="../catedetail/4/21.html"><img width="185" alt="The Spring" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%203%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/21.html"><img width="185" alt="The Spring" src="/assetsadmin/imagesupload/image/page%203%20TAYNGUYEN.jpg"></a>
 					<h4></h4>The Spring				</li>
 							<li >
-					<a href="../catedetail/4/16.html"><img width="185" alt="Age of moon 1" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%206%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/16.html"><img width="185" alt="Age of moon 1" src="/assetsadmin/imagesupload/image/page%206%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Age of moon 1				</li>
 							<li class="last">
-					<a href="../catedetail/4/15.html"><img width="185" alt="Blue silk" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/15.html"><img width="185" alt="Blue silk" src="/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Blue silk				</li>
 							<li >
-					<a href="../catedetail/4/14.html"><img width="185" alt="Last summer" src="../../assetsadmin/imagesupload/image/page&#32;12&#32;TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/14.html"><img width="185" alt="Last summer" src="/assetsadmin/imagesupload/image/page&#32;12&#32;TAYNGUYEN.jpg"></a>
 					<h4></h4>Last summer				</li>
 							<li >
-					<a href="../catedetail/4/13.html"><img width="185" alt="Age of moon" src="../../assetsadmin/imagesupload/image/page&#32;10&#32;TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/13.html"><img width="185" alt="Age of moon" src="/assetsadmin/imagesupload/image/page&#32;10&#32;TAYNGUYEN.jpg"></a>
 					<h4></h4>Age of moon				</li>
 							<li class="last">
-					<a href="../catedetail/4/10.html"><img width="185" alt="Red lotus" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%205%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/10.html"><img width="185" alt="Red lotus" src="/assetsadmin/imagesupload/image/page%205%20TAYNGUYEN.jpg"></a>
 					<h4></h4>Red lotus				</li>
 							<li >
-					<a href="../catedetail/4/9.html"><img width="185" alt="My sister" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%208%20TAYNGUYEN.jpg"></a>
+					<a href="../catedetail/4/9.html"><img width="185" alt="My sister" src="/assetsadmin/imagesupload/image/page%208%20TAYNGUYEN.jpg"></a>
 					<h4></h4>My sister				</li>
 
 </ul>
