--- a/catalogue/catedetail/4/15.html
+++ b/catalogue/catedetail/4/15.html
@@ -68,12 +68,12 @@ category: catalogue
 
 <h2>Blue silk</h2>
 
-<form action="http://nguyentay.art/catalogue/catedetail/4/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
+<form action="/catalogue/catedetail/4/scart.html?action=add_product&amp;product_id=150309" method="post" name="add1">
 <div id="details">
 	<div class="images">
 		<div class="large">
 			<a title="Blue silk" >
-				<img width="328" border="0" name="largeimg" src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg">
+				<img width="328" border="0" name="largeimg" src="/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg">
 			</a>
 		</div>
 	</div>
@@ -92,8 +92,8 @@ category: catalogue
 				<div id="gallery1" class="gallery">
 					<ul>
 															<li>
-										<a href="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg" title="" rel="lightbox[gallery1]">
-											<img src="http://www.nguyentay.art/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg" width="72" height="72" alt="" />
+										<a href="/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg" title="" rel="lightbox[gallery1]">
+											<img src="/assetsadmin/imagesupload/image/page%209%20TAYNGUYEN.jpg" width="72" height="72" alt="" />
 										</a>
 									</li>
 														 
